# serializer version: 1
# name: test_eg_size1d
  dict({
    '&@?': 100.0,
  })
# ---
# name: test_eg_size1u
  dict({
    '@': 100.0,
  })
# ---
# name: test_eg_size2d
  dict({
    '&AG': 100.0,
  })
# ---
# name: test_eg_size2u
  dict({
    'A_': 100.0,
  })
# ---
# name: test_eg_size3d
  dict({
    '&B?o': 23.727312970340858,
    '&BCO': 48.51704293935369,
    '&BC_': 24.623727312970342,
    '&BCo': 2.33510402833112,
    '&BP_': 0.796812749003984,
  })
# ---
# name: test_eg_size3u
  dict({
    'BW': 96.8680832226649,
    'Bw': 3.131916777335104,
  })
# ---
# name: test_eg_size4d
  dict({
    '&C??w': 7.180508926610398,
    '&C?@o': 22.96131279219353,
    '&C?Cg': 8.186125317686926,
    '&C?Go': 8.690502337548242,
    '&C?Gw': 0.5082990806689467,
    '&C?Kg': 0.4933952495999498,
    '&C?Ko': 0.10668005396755671,
    '&C?Kw': 0.01961030403815381,
    '&C?`o': 0.509867904991999,
    '&C?gG': 23.497066298515893,
    '&C?gO': 8.104546452888206,
    '&C?g_': 8.508518716074175,
    '&C?go': 0.39377490508612845,
    '&C?ho': 0.04157384456088607,
    '&CA@o': 0.5530105738759373,
    '&CACW': 0.5428132157760974,
    '&CACo': 0.48633554014621444,
    '&CACw': 0.04000502023783377,
    '&CAGW': 0.19139656741238117,
    '&CAG_': 7.6338991559725144,
    '&CAGo': 0.5028081955382636,
    '&CAGw': 0.021963540522732264,
    '&CAKW': 0.029023249976467637,
    '&CAKg': 0.036867371591729155,
    '&CAKo': 0.009412945938313828,
    '&CAKw': 0.021963540522732264,
    '&CAho': 0.005490885130683066,
    '&CG`o': 0.01411941890747074,
    '&CO[g': 0.0180414797151015,
    '&CO`_': 0.09962034451382135,
    '&CO`o': 0.047064729691569135,
    '&COg_': 0.5075146685074206,
    '&COgo': 0.032160898622572244,
    '&COgw': 0.004706472969156914,
  })
# ---
# name: test_eg_size4u
  dict({
    'CF': 61.272787173292336,
    'CN': 4.104044429104829,
    'CR': 33.48969282419755,
    'C^': 0.29180132408772863,
    'Cr': 0.7914718709798877,
    'C~': 0.05020237833767375,
  })
# ---
# name: test_eg_size5d
  dict({
    '&D???N?': 2.6167360461494265,
    '&D???]?': 11.591322954427538,
    '&D??@L?': 1.5141085071534421,
    '&D??BH?': 2.4086702634514894,
    '&D??CM?': 1.7960509647324865,
    '&D??CN?': 0.19600329611079273,
    '&D??C]?': 0.17420362155571198,
    '&D??DL?': 0.11587738119056258,
    '&D??EI?': 0.6928421010816999,
    '&D??EM?': 0.058180909201448854,
    '&D??EN?': 0.0034395042075794076,
    '&D??FL?': 0.006636789808991251,
    '&D??FM?': 0.000920430703436743,
    '&D??FN?': 0.00014533116370053835,
    '&D??G[?': 18.117418860400214,
    '&D??HK?': 2.5029901886931385,
    '&D??LL?': 0.007557220512427994,
    '&D??ML?': 0.004650597238417227,
    '&D??O]?': 0.13927569854634925,
    '&D??QI?': 1.2156467406337699,
    '&D??QY?': 0.10056916528077255,
    '&D??SM?': 0.10144115226297577,
    '&D??S[?': 0.11917155423444145,
    '&D??S]?': 0.009979406574103634,
    '&D??UB?': 0.18122796113457132,
    '&D??UH?': 0.35848353712799463,
    '&D??UI?': 0.10614019322262651,
    '&D??UJ?': 0.010173181459037684,
    '&D??UK?': 0.05541961709113863,
    '&D??UL?': 0.006879008415158815,
    '&D??UM?': 0.007266558185026918,
    '&D??UN?': 0.0005813246548021534,
    '&D??U]?': 0.0004359934911016151,
    '&D??[[?': 0.0032941730438788694,
    '&D??]K?': 0.00382705397744751,
    '&D?@?Y?': 3.210123187538725,
    '&D?@@I?': 5.04352426134225,
    '&D?@@J?': 0.12672877474686944,
    '&D?@AI?': 1.2482978087451575,
    '&D?@AJ?': 0.04728107192390848,
    '&D?@BJ?': 0.00382705397744751,
    '&D?@CI?': 1.44609352254159,
    '&D?@CM?': 0.06917763392145626,
    '&D?@DJ?': 0.007411889348727456,
    '&D?@EJ?': 0.0028097358315437417,
    '&D?@S]?': 0.00014533116370053835,
    '&D?A?[?': 3.7848594962531203,
    '&D?A?]?': 0.426256303133679,
    '&D?A@K?': 1.3118559710035262,
    '&D?A@M?': 0.12178751518105115,
    '&D?A@N?': 0.0075087767911944815,
    '&D?A@]?': 0.004117716304848587,
    '&D?AAB?': 0.68208759496786,
    '&D?AAJ?': 0.06336438737343472,
    '&D?AAK?': 0.7636668215250956,
    '&D?AAN?': 0.0016955302431729475,
    '&D?AA]?': 0.0028097358315437417,
    '&D?ABB?': 0.10706062392606326,
    '&D?ABD?': 0.058035578037748316,
    '&D?ABE?': 0.06573812971387685,
    '&D?ABH?': 0.10744817369593136,
    '&D?ABJ?': 0.006636789808991251,
    '&D?ABL?': 0.0029066232740107673,
    '&D?ABM?': 0.003100398158944818,
    '&D?ABN?': 0.0008235432609697173,
    '&D?ACK?': 2.4924779011854663,
    '&D?ACM?': 0.1390819236614152,
    '&D?ACN?': 0.0063945712028236875,
    '&D?AC]?': 0.01182026798097712,
    '&D?ADD?': 0.0716482637043654,
    '&D?ADE?': 0.05871379013501749,
    '&D?ADL?': 0.003100398158944818,
    '&D?ADM?': 0.00295506699524428,
    '&D?ADN?': 0.0011626493096043068,
    '&D?AEB?': 0.10303979506368169,
    '&D?AED?': 0.06128130736039367,
    '&D?AEE?': 0.02262321781605047,
    '&D?AEH?': 0.1121472146555821,
    '&D?AEI?': 0.064430149240572,
    '&D?AEJ?': 0.009834075410403095,
    '&D?AEK?': 0.06220173806383041,
    '&D?AEL?': 0.007218114463793405,
    '&D?AEM?': 0.0026159609466096904,
    '&D?AEN?': 0.0005813246548021534,
    '&D?AFF?': 9.688744246702557e-05,
    '&D?AFJ?': 0.0023252986192086136,
    '&D?AFL?': 0.00048443721233512783,
    '&D?AFM?': 9.688744246702557e-05,
    '&D?AFN?': 9.688744246702557e-05,
    '&D?AI[?': 0.0008235432609697173,
    '&D?AK[?': 0.0030035107164777925,
    '&D?AQ[?': 0.0032941730438788694,
    '&D?ASU?': 0.008913644706966352,
    '&D?AS[?': 0.004408378632249663,
    '&D?AS]?': 0.0009688744246702557,
    '&D?AUK?': 0.0032941730438788694,
    '&D?AUM?': 0.00038754976986810226,
    '&D?B@]?': 0.0003391060486345895,
    '&D?BBJ?': 0.0002906623274010767,
    '&D?BC]?': 0.0002906623274010767,
    '&D?BDJ?': 0.0030519544377113055,
    '&D?BDM?': 0.00019377488493405113,
    '&D?BDN?': 0.00024221860616756392,
    '&D?BEK?': 0.0014048679157718708,
    '&D?BEM?': 0.00038754976986810226,
    '&D?BEN?': 4.844372123351278e-05,
    '&D?BFJ?': 9.688744246702557e-05,
    '&D?BU]?': 4.844372123351278e-05,
    '&D?CJH?': 0.0016470865219394347,
    '&D?CMH?': 0.008429207494631224,
    '&D?FDJ?': 0.0004359934911016151,
    '&D?GLD?': 0.01303136101181494,
    '&D?GLH?': 0.009252750755600942,
    '&D?GLK?': 0.008090101445996634,
    '&D?GLL?': 0.001840861406873486,
    '&D?GO]?': 0.004069272583615074,
    '&D?GSE?': 0.057841803152814265,
    '&D?GSM?': 0.00886520098573284,
    '&D?GS]?': 0.00038754976986810226,
    '&D?HDL?': 0.00014533116370053835,
    '&D?HS]?': 9.688744246702557e-05,
    '&D?IDL?': 0.00024221860616756392,
    '&D?IS]?': 0.00014533116370053835,
    '&D?J@]?': 0.00024221860616756392,
    '&D?JC]?': 4.844372123351278e-05,
    '&D?OG[?': 0.29226097020178265,
    '&D?OHK?': 0.1057041997315249,
    '&D?OIK?': 0.10924059138157133,
    '&D?OJH?': 0.00624924003912315,
    '&D?OJL?': 0.0008235432609697173,
    '&D?OKK?': 0.07547531768181293,
    '&D?OLD?': 0.005474140499386945,
    '&D?OLH?': 0.010027850295337147,
    '&D?OLL?': 0.00014533116370053835,
    '&D?OMD?': 0.0063945712028236875,
    '&D?OMH?': 0.002664404667843203,
    '&D?OML?': 0.0005328809335686406,
    '&D?ONL?': 0.00014533116370053835,
    '&D?OO[?': 0.1045899941431541,
    '&D?OO]?': 0.011432718211109017,
    '&D?OQK?': 0.06617412320497847,
    '&D?OQM?': 0.007169670742559892,
    '&D?OQN?': 0.0002906623274010767,
    '&D?OQ]?': 0.004747484680884253,
    '&D?OS@?': 5.211430199137605,
    '&D?OSA?': 1.7511436351490202,
    '&D?OSC?': 1.176649545040792,
    '&D?OSE?': 0.08342008796410902,
    '&D?OSG?': 1.2319722746894637,
    '&D?OSK?': 0.020055700590674293,
    '&D?OSM?': 0.003681722813746972,
    '&D?OS]?': 0.00024221860616756392,
    '&D?OUB?': 0.0053772530569199195,
    '&D?OUD?': 0.006636789808991251,
    '&D?OUE?': 0.006152352596656124,
    '&D?OUF?': 0.001792417685639973,
    '&D?OUH?': 0.0034395042075794076,
    '&D?OUI?': 0.004020828862381561,
    '&D?OUK?': 0.0034395042075794076,
    '&D?OUL?': 0.00014533116370053835,
    '&D?OUM?': 0.0003391060486345895,
    '&D?OUN?': 0.0003391060486345895,
    '&D?O]D?': 0.002422186061675639,
    '&D?O]H?': 0.0003391060486345895,
    '&D?O]K?': 0.00024221860616756392,
    '&D?Q?[?': 0.09611234292728936,
    '&D?Q@F?': 0.006152352596656124,
    '&D?Q@K?': 0.10333045739108276,
    '&D?Q@N?': 0.0006297683760356662,
    '&D?QAE?': 0.10502598763425572,
    '&D?QAF?': 0.007944770282296097,
    '&D?QAK?': 0.10633396810756056,
    '&D?QAM?': 0.007411889348727456,
    '&D?QAN?': 0.0004359934911016151,
    '&D?QA]?': 0.00014533116370053835,
    '&D?QBD?': 0.002712848389076716,
    '&D?QBL?': 0.00014533116370053835,
    '&D?QCF?': 0.0028097358315437417,
    '&D?QCK?': 0.10957969743020592,
    '&D?QCN?': 0.0005813246548021534,
    '&D?QDD?': 0.001986192570574024,
    '&D?QDL?': 0.0004359934911016151,
    '&D?QED?': 0.003584835371279946,
    '&D?QEF?': 0.00048443721233512783,
    '&D?QEL?': 0.00038754976986810226,
    '&D?QEM?': 0.0003391060486345895,
    '&D?QEN?': 9.688744246702557e-05,
    '&D?QFL?': 4.844372123351278e-05,
    '&D?QQU?': 0.0014533116370053837,
    '&D?QQY?': 4.844372123351278e-05,
    '&D?QQ[?': 0.00038754976986810226,
    '&D?QQ]?': 4.844372123351278e-05,
    '&D?QSU?': 0.00014533116370053835,
    '&D?QSY?': 0.0011626493096043068,
    '&D?QS[?': 0.0002906623274010767,
    '&D?QS]?': 0.00019377488493405113,
    '&D?QUB?': 0.0005328809335686406,
    '&D?QUD?': 9.688744246702557e-05,
    '&D?QUE?': 0.00038754976986810226,
    '&D?QUF?': 9.688744246702557e-05,
    '&D?QUH?': 0.00019377488493405113,
    '&D?QUI?': 0.00038754976986810226,
    '&D?QUJ?': 9.688744246702557e-05,
    '&D?QUK?': 0.00024221860616756392,
    '&D?QUM?': 4.844372123351278e-05,
    '&D?QUN?': 0.00019377488493405113,
    '&D?YSU?': 4.844372123351278e-05,
    '&D?YSY?': 9.688744246702557e-05,
    '&D@?G[?': 0.22211446185565611,
    '&D@?JD?': 0.007750995397362045,
    '&D@?JH?': 0.0034395042075794076,
    '&D@?JL?': 0.0006297683760356662,
    '&D@?LD?': 0.0028581795527772543,
    '&D@?LH?': 0.006636789808991251,
    '&D@?LL?': 0.0007750995397362045,
    '&D@?MD?': 0.004263047468549125,
    '&D@?MH?': 0.003681722813746972,
    '&D@?ML?': 0.0014048679157718708,
    '&D@?NL?': 0.0003391060486345895,
    '&D@?OU?': 0.0723264758016346,
    '&D@?O[?': 0.07557220512427995,
    '&D@?O]?': 0.0038754976986810226,
    '&D@?QE?': 0.11587738119056258,
    '&D@?QM?': 0.0025675172253761774,
    '&D@?Q]?': 0.00019377488493405113,
    '&D@?S@?': 2.01923118845528,
    '&D@?SC?': 0.6306403630178694,
    '&D@?SE?': 0.01860238895366891,
    '&D@?SG?': 2.5512401350417173,
    '&D@?SM?': 0.0028097358315437417,
    '&D@?S]?': 0.000678212097269179,
    '&D@?UB?': 0.005135034450752355,
    '&D@?UD?': 0.004844372123351278,
    '&D@?UE?': 0.0030519544377113055,
    '&D@?UF?': 9.688744246702557e-05,
    '&D@?UH?': 0.012401592635779272,
    '&D@?UI?': 0.002034636291807537,
    '&D@?UK?': 0.0025675172253761774,
    '&D@?UL?': 0.0018893051281069985,
    '&D@?UM?': 0.0003391060486345895,
    '&D@?UN?': 0.00014533116370053835,
    '&D@@?U?': 0.15845941215482032,
    '&D@@?[?': 0.11946221656184253,
    '&D@@?]?': 0.008429207494631224,
    '&D@@@K?': 0.05672759756444347,
    '&D@@AC?': 11.840323681567794,
    '&D@@AE?': 0.36124482923830487,
    '&D@@AK?': 0.18166395462567295,
    '&D@@AM?': 0.01027006890150471,
    '&D@@A]?': 0.0008235432609697173,
    '&D@@BD?': 0.008283876330930686,
    '&D@@BE?': 0.0023252986192086136,
    '&D@@BF?': 0.0015986428007059219,
    '&D@@BH?': 0.0033426167651123824,
    '&D@@BL?': 0.0003391060486345895,
    '&D@@BM?': 0.0003391060486345895,
    '&D@@CE?': 0.08627826751688628,
    '&D@@CM?': 0.006927452136392329,
    '&D@@C]?': 0.00024221860616756392,
    '&D@@DD?': 0.017536627086531628,
    '&D@@DE?': 0.003584835371279946,
    '&D@@DH?': 0.00295506699524428,
    '&D@@DI?': 0.008816757264499327,
    '&D@@DL?': 0.00019377488493405113,
    '&D@@ED?': 0.003148841880178331,
    '&D@@EE?': 0.0037301665349804844,
    '&D@@EF?': 0.00019377488493405113,
    '&D@@EH?': 0.004505266074716689,
    '&D@@EI?': 0.003536391650046433,
    '&D@@EK?': 0.0038754976986810226,
    '&D@@EL?': 0.0015017553582388962,
    '&D@@EM?': 4.844372123351278e-05,
    '&D@@EN?': 0.0002906623274010767,
    '&D@@FF?': 0.00014533116370053835,
    '&D@@FL?': 0.00014533116370053835,
    '&D@@FN?': 0.00014533116370053835,
    '&D@@QU?': 0.0002906623274010767,
    '&D@@Q]?': 9.688744246702557e-05,
    '&D@@S]?': 4.844372123351278e-05,
    '&D@@UB?': 9.688744246702557e-05,
    '&D@@UD?': 4.844372123351278e-05,
    '&D@@UE?': 9.688744246702557e-05,
    '&D@@UK?': 9.688744246702557e-05,
    '&D@@UM?': 9.688744246702557e-05,
    '&D@@U]?': 9.688744246702557e-05,
    '&D@A?U?': 0.04350246166769448,
    '&D@A?[?': 0.16466020847270996,
    '&D@A?]?': 0.007024339578859354,
    '&D@A@K?': 0.062298625506297445,
    '&D@AAE?': 0.10972502859390645,
    '&D@AAK?': 0.10541353740412382,
    '&D@AAM?': 0.009155863313133917,
    '&D@AA]?': 0.00019377488493405113,
    '&D@ABD?': 0.0032941730438788694,
    '&D@ABE?': 0.005183478171985868,
    '&D@ABF?': 0.0004359934911016151,
    '&D@ABH?': 0.006975895857625841,
    '&D@ABL?': 0.0005813246548021534,
    '&D@ABM?': 9.688744246702557e-05,
    '&D@ACE?': 0.05517739848497106,
    '&D@ACF?': 0.0020830800130410498,
    '&D@ACG?': 2.7297068040659784,
    '&D@ACK?': 0.1720236541002039,
    '&D@ACM?': 0.005958577711722072,
    '&D@ACN?': 9.688744246702557e-05,
    '&D@AC]?': 0.0005328809335686406,
    '&D@ADD?': 0.0025675172253761774,
    '&D@ADL?': 9.688744246702557e-05,
    '&D@AED?': 0.0021799674555080754,
    '&D@AEE?': 0.0032941730438788694,
    '&D@AEF?': 0.00014533116370053835,
    '&D@AEH?': 0.007799439118595559,
    '&D@AEI?': 0.0016470865219394347,
    '&D@AEK?': 0.0023252986192086136,
    '&D@AEL?': 0.0008235432609697173,
    '&D@AEM?': 0.00024221860616756392,
    '&D@AEN?': 0.00019377488493405113,
    '&D@AFL?': 0.00019377488493405113,
    '&D@AFN?': 4.844372123351278e-05,
    '&D@AQU?': 0.00048443721233512783,
    '&D@AQ[?': 0.00014533116370053835,
    '&D@ASU?': 0.0004359934911016151,
    '&D@ASY?': 9.688744246702557e-05,
    '&D@AS]?': 4.844372123351278e-05,
    '&D@AUB?': 0.00024221860616756392,
    '&D@AUD?': 0.00024221860616756392,
    '&D@AUE?': 0.00038754976986810226,
    '&D@AUH?': 0.00019377488493405113,
    '&D@AUI?': 0.00024221860616756392,
    '&D@AUK?': 0.00019377488493405113,
    '&D@AU]?': 0.00014533116370053835,
    '&D@B@]?': 9.688744246702557e-05,
    '&D@BA]?': 0.00024221860616756392,
    '&D@BBF?': 9.688744246702557e-05,
    '&D@BBM?': 4.844372123351278e-05,
    '&D@BBN?': 9.688744246702557e-05,
    '&D@BC]?': 0.0002906623274010767,
    '&D@BDJ?': 0.00019377488493405113,
    '&D@BDN?': 0.00014533116370053835,
    '&D@BEB?': 0.00014533116370053835,
    '&D@BEN?': 4.844372123351278e-05,
    '&D@BFL?': 4.844372123351278e-05,
    '&D@BFN?': 9.688744246702557e-05,
    '&D@BU]?': 9.688744246702557e-05,
    '&D@HS]?': 4.844372123351278e-05,
    '&D@QQ]?': 0.00024221860616756392,
    '&D@QS]?': 0.00014533116370053835,
    '&D@QUF?': 9.688744246702557e-05,
    '&D@QUN?': 4.844372123351278e-05,
    '&DBQUF?': 4.844372123351278e-05,
    '&DCCJH?': 0.000678212097269179,
    '&DCFBJ?': 9.688744246702557e-05,
    '&DCGHK?': 0.007363445627493944,
    '&DCGO]?': 4.844372123351278e-05,
    '&DCI@K?': 0.003148841880178331,
    '&DCJ@]?': 4.844372123351278e-05,
    '&DCQBL?': 4.844372123351278e-05,
    '&DD?Y[?': 0.00038754976986810226,
    '&DDABL?': 4.844372123351278e-05,
    '&DDBBJ?': 4.844372123351278e-05,
    '&DGGG[?': 0.002034636291807537,
    '&DGGHK?': 0.0029066232740107673,
    '&DGGLD?': 0.0003391060486345895,
    '&DGGLL?': 0.00014533116370053835,
    '&DGG[[?': 0.00038754976986810226,
    '&DGH?[?': 0.0033426167651123824,
    '&DGH@K?': 0.0037301665349804844,
    '&DGHCK?': 0.009543413083002019,
    '&DGHSY?': 9.688744246702557e-05,
    '&DGOG[?': 0.003536391650046433,
    '&DGOHK?': 0.0018893051281069985,
    '&DGOJH?': 9.688744246702557e-05,
    '&DGOKK?': 0.00624924003912315,
    '&DGOLH?': 0.0007266558185026918,
    '&DGOLL?': 9.688744246702557e-05,
    '&DGOMH?': 0.0006297683760356662,
    '&DGONL?': 4.844372123351278e-05,
    '&DGOUB?': 0.0003391060486345895,
    '&DGOUH?': 9.688744246702557e-05,
    '&DGOUI?': 0.00024221860616756392,
    '&DGOUK?': 0.0003391060486345895,
    '&DGO[[?': 9.688744246702557e-05,
    '&DH?JH?': 0.0002906623274010767,
    '&DH?LH?': 0.0012595367520713324,
    '&DH?LL?': 0.00014533116370053835,
    '&DH?MH?': 0.0003391060486345895,
    '&DH?UH?': 0.0013079804733048452,
    '&DH?UI?': 4.844372123351278e-05,
    '&DH?[[?': 0.00019377488493405113,
    '&DH@I[?': 4.844372123351278e-05,
    '&DH@JK?': 9.688744246702557e-05,
    '&DH@K[?': 0.00014533116370053835,
    '&DH@LK?': 0.0002906623274010767,
    '&DH@QU?': 9.688744246702557e-05,
    '&DH@Q[?': 4.844372123351278e-05,
    '&DH@SY?': 9.688744246702557e-05,
    '&DH@UK?': 4.844372123351278e-05,
    '&DOCJH?': 9.688744246702557e-05,
    '&DOCLH?': 0.0008235432609697173,
    '&DOCMH?': 0.0009688744246702557,
    '&DOCUH?': 0.0049412595658183045,
    '&DOCUI?': 0.00024221860616756392,
    '&DOFBJ?': 4.844372123351278e-05,
    '&DOFDJ?': 0.00014533116370053835,
    '&DOFFJ?': 0.00024221860616756392,
    '&DOGHK?': 0.0026159609466096904,
    '&DOGLD?': 0.00024221860616756392,
    '&DOGLH?': 0.00038754976986810226,
    '&DOGLL?': 0.0003391060486345895,
    '&DOGO]?': 9.688744246702557e-05,
    '&DOGSM?': 0.0002906623274010767,
    '&DOGS]?': 0.00024221860616756392,
    '&DOH?]?': 0.0010173181459037686,
    '&DOH@K?': 0.004069272583615074,
    '&DOHCM?': 0.0004359934911016151,
    '&DOHS]?': 0.00014533116370053835,
    '&DOI@K?': 0.003536391650046433,
    '&DOICM?': 9.688744246702557e-05,
    '&DOIC]?': 0.00014533116370053835,
    '&DOIDL?': 0.00024221860616756392,
    '&DOIS]?': 0.00014533116370053835,
    '&DOJ@]?': 0.0002906623274010767,
    '&DOJC]?': 9.688744246702557e-05,
    '&DOOG[?': 0.011578049374809555,
    '&DOOHK?': 0.008186988888463661,
    '&DOOIK?': 0.012740698684413862,
    '&DOOJH?': 0.00024221860616756392,
    '&DOOKK?': 0.0049412595658183045,
    '&DOOLH?': 0.0003391060486345895,
    '&DOOMH?': 0.0002906623274010767,
    '&DOOML?': 4.844372123351278e-05,
    '&DOONL?': 0.00014533116370053835,
    '&DOOOW?': 0.003148841880178331,
    '&DOOO]?': 0.0005328809335686406,
    '&DOOQA?': 0.1144240695535572,
    '&DOOQC?': 0.14630003812520861,
    '&DOOQG?': 0.06409104319193741,
    '&DOOSG?': 0.10846549184183513,
    '&DOOSM?': 0.0005813246548021534,
    '&DOOS]?': 4.844372123351278e-05,
    '&DOOUB?': 0.00014533116370053835,
    '&DOOUH?': 0.00019377488493405113,
    '&DOOUI?': 0.0003391060486345895,
    '&DOOUK?': 0.0004359934911016151,
    '&DOOUL?': 0.00014533116370053835,
    '&DOOUN?': 4.844372123351278e-05,
    '&DOQ?[?': 0.00731500190626043,
    '&DOQ?]?': 0.0005328809335686406,
    '&DOQ@K?': 0.006152352596656124,
    '&DOQAK?': 0.005861690269255047,
    '&DOQBH?': 0.00038754976986810226,
    '&DOQBL?': 9.688744246702557e-05,
    '&DOQCK?': 0.007121227021326379,
    '&DOQCM?': 0.0019377488493405113,
    '&DOQCN?': 0.00024221860616756392,
    '&DOQC]?': 9.688744246702557e-05,
    '&DOQDH?': 0.0002906623274010767,
    '&DOQEH?': 0.00019377488493405113,
    '&DOQEI?': 9.688744246702557e-05,
    '&DOQEK?': 0.00014533116370053835,
    '&DOQEL?': 9.688744246702557e-05,
    '&DOQEN?': 4.844372123351278e-05,
    '&DOQFL?': 4.844372123351278e-05,
    '&DOQS]?': 9.688744246702557e-05,
    '&DOQUJ?': 4.844372123351278e-05,
    '&DOQU]?': 4.844372123351278e-05,
    '&DOYSU?': 9.688744246702557e-05,
  })
# ---
# name: test_eg_size5u
  dict({
    'D?{': 46.89550834661095,
    'D@s': 34.28584992813374,
    'D@{': 2.851058325755928,
    'DBw': 1.7174268051704953,
    'DB{': 0.2708972891378035,
    'DDW': 10.399752743246824,
    'DD[': 1.9248143757711635,
    'DFw': 0.08787691031759219,
    'DF{': 0.010124737737804172,
    'DJk': 0.1943562095888533,
    'DJ{': 0.038173652332008076,
    'DN{': 0.009010532149433379,
    'DR{': 0.017633514528998653,
    'D^{': 0.0031972856014118437,
    'D`[': 1.0890148533293673,
    'D`{': 0.02926000762504172,
    'Dd[': 0.09882519131636608,
    'DqK': 0.064430149240572,
    'Dr[': 0.011529605653576042,
    'Dr{': 0.000678212097269179,
    'D~{': 0.0005813246548021534,
  })
# ---
